CSS fixes; no double borders, text aligned to centre of bars without doubling bars, time counts in opposite direction, text size increase, readable text, colour changes, etc.

--- a/jspsych-5.0.3/css/jspsych.css
+++ b/jspsych-5.0.3/css/jspsych.css
@@ -7,15 +7,38 @@
 
 
 #myTimingProgress {
-  width: 100%;
-  background-color: #ddd;
+  width: 32%;
+  background-color: rgb(213, 213, 213);
+  border: 4px black solid;
+  border-width: 4px 4px 0px 4px;
+  position: relative;
+  left: 32.5%;
 }
 
 #myTimingBar {
   width: 0%;
   height: 30px;
   background-color: #4CAF50;
+  white-space: nowrap;
+  text-align: center;
+  position: relative;
+  border: 4px black solid;
+  border-width: 0px 4px 0px 0px;
+  color: white;
+  text-shadow: 1px 0 0 #000, 0 -1px 0 #000, 0 1px 0 #000, -1px 0 0 #000;
+  text-indent: 16%;
+  font-size: 150%;
 }
+
+/*#myTimingBarText {
+  width: 100%;
+  position: absolute; /*made all other elements relative, allowing the text to keep absolute, now it aligns properly*//*
+  top: 0;
+  left: 0;
+  text-align: center;
+  z-index: 2;
+  color: white;
+  text-shadow: 1px 0 0 #000, 0 -1px 0 #000, 0 1px 0 #000, -1px 0 0 #000;*/
 
 #myScore1Progress {
   width: 32%;
@@ -23,36 +46,41 @@
   border: 4px black solid;
   border-width: 0px 2px 4px 4px;
   display: inline-block;
+  position: relative;
 }
 
 #myScore2Progress {
   width: 32%;
-  background-color: #ddd;
+  background-color:  rgb(213, 213, 213);
   border: 4px black solid;
   border-width: 0px 2px 4px 2px;
   display: inline-block;
+  position: relative;
 }
 
 #myScore3Progress {
   width: 32%;
-  background-color: #ddd;
+  background-color:  rgb(213, 213, 213);
   border: 4px black solid;
   border-width: 0px 4px 4px 2px;
   display: inline-block;
+  position: relative;
 }
 
 #scoreBarMaster {
   width: 100%;
-  background-color: #ddd;
+  background-color:  rgb(213, 213, 213);
   display: inline-block;
+  position: relative;
 }
 
 #myScoreBar1 {
   width: 100%;
   height: 30px;
-  background-color: #ddd;
+  background-color:  rgb(213, 213, 213);
   border: 0px black solid;
   display: inline-block;
+  position: relative;
 }
 
 #myScoreBar2 {
@@ -69,11 +97,14 @@
 
 #myScoreBar2Text {
   width: 100%;
-  position: absolute;
-  top: 236px;
+  position: absolute; /*made all other elements relative, allowing the text to keep absolute, now it aligns properly*/
+  top: 0;
   left: 0;
   text-align: center;
   z-index: 2;
+  color: white;
+  text-shadow: 1px 0 0 #000, 0 -1px 0 #000, 0 1px 0 #000, -1px 0 0 #000;
+  font-size: 150%;
 }
 
 #myScoreBar3 {
@@ -82,6 +113,7 @@
   background-color: #4CAF50;
   border: 0px black solid;
   display: inline-block;
+  position: relative;
 }
 
 #myNegScoreBar {
@@ -89,6 +121,7 @@
   height: 30px;
   background-color: red;
   display: inline-block;
+  position: relative;
 }
 
 /* fonts and type */
